--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Radhakrishna weds Rashni</title>
+    <title>Vikshitha weds Abhishek</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta property="og:type" content="website" />
